# books_system

./: .env.example  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial.py  002_schema_v2.py
app/: config.py  dependencies.py  main.py
app/api/v1/: auth.py  books.py  catalog.py  router.py
app/core/: exceptions.py  security.py
app/database/: base.py  session.py
app/models/: __init__.py  book.py  user.py  user_book.py
app/schemas/: auth.py  book.py  error.py  user_book.py
app/services/: auth_service.py  book_service.py
